@@ -1,5 +1,7 @@
 === HEAD
 
+* Make Dataset#select, #select_more, and #get take a block that yields a SQL::VirtualRow, similar to #filter (jeremyevans)
+
 * Fix stored procedures in MySQL adapter when multiple arguments are used (clivecrous)
 
 * Add :conditions association option, for easier filtering of associated objects (jeremyevans)
